force-app/main/default/objects/Work_Item_Routing__mdt/Work_Item_Routing__mdt.object-meta.xml
<CustomObject>
    <description>Table to capture related queue ids for each Divison and Branch for routing purposes</description>
    <label>Work Item Routing</label>
    <pluralLabel>Work Items Routing</pluralLabel>
</CustomObject>