force-app/main/default/objects/Work_Item_Routing__mdt/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <length>15</length>
    <type>Text</type>
</CustomField>