force-app/main/default/objects/Work_Item_Routing__mdt/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>5</length>
    <type>Text</type>
</CustomField>