force-app/main/default/objects/Work_Item_Routing__mdt/fields/Division_Branch_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Division_Branch_Queue_Id__c</fullName>
    <label>Division &amp; Branch Queue Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>