force-app/main/default/objects/Work_Item_Routing__mdt/fields/Division_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Division_Record_Type_Id__c</fullName>
    <label>Division Record Type Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>