force-app/main/default/objects/Work_Item_Routing__mdt/fields/Escalated_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Queue_Id__c</fullName>
    <label>Escalated Queue Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>