force-app/main/default/objects/Work_Item_Routing__mdt/fields/Supervisor_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email_Address__c</fullName>
    <description>The email address used to send to supervisor queue</description>
    <label>Supervisor Email Address</label>
    <type>Email</type>
</CustomField>