force-app/main/default/objects/Work_Item_Routing__mdt/listViews/All_with_Details.listView-meta.xml
<ListView>
    <fullName>All_with_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Division__c</columns>
    <columns>Branch__c</columns>
    <columns>Division_Record_Type_Id__c</columns>
    <columns>Division_Branch_Queue_Id__c</columns>
    <columns>Escalated_Queue_Id__c</columns>
    <columns>Notification_Email_Address__c</columns>
    <columns>Supervisor_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Details</label>
</ListView>